--- a/.github/workflows/sync-dropbox.yml
+++ b/.github/workflows/sync-dropbox.yml
@@ -17,13 +17,16 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y rclone
 
+      - name: Configure rclone token for Dropbox
+        run: |
+          echo 'RCLONE_DROPBOX_TOKEN={"access_token":"${{ secrets.DROPBOX_ACCESS_TOKEN }}","token_type":"bearer","expiry":"0001-01-01T00:00:00Z"}' >> "$GITHUB_ENV"
+
       - name: Sync files from Dropbox
         run: |
           rclone sync \
-            --config /dev/null \
-            --dropbox-token ${{ secrets.DROPBOX_ACCESS_TOKEN }} \
             ":dropbox:/Apps/github-sync-app/Website/Documents" \
-            "./docs"
+            "./docs" \
+            --fast-list
 
       - name: Commit and push changes
         uses: stefanzweifel/git-auto-commit-action@v5
