--- a/.github/workflows/sync-dropbox.yml
+++ b/.github/workflows/sync-dropbox.yml
@@ -17,20 +17,20 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y rclone
 
-      # Build the JSON token rclone expects
+      # Provide a JSON token; for long-lived CI, include a refresh_token too if you have one
       - name: Configure rclone token for Dropbox
         run: |
           echo 'RCLONE_DROPBOX_TOKEN={"access_token":"${{ secrets.DROPBOX_ACCESS_TOKEN }}","token_type":"bearer","expiry":"0001-01-01T00:00:00Z"}' >> "$GITHUB_ENV"
 
-      # Optional: list root of the *app folder* to verify access
+      # Optional sanity check: list the app folder root (no leading slash)
       - name: Verify Dropbox access (optional)
         run: |
-          rclone lsd ":dropbox:/"
+          rclone lsd ":dropbox:"
 
-      - name: Sync files from Dropbox (app-folder path)
+      - name: Sync files from Dropbox (app-folder path; NO leading slash)
         run: |
           rclone sync \
-            ":dropbox:/Website/Documents" \
+            ":dropbox:Website/Documents" \
             "./docs" \
             --fast-list
 
