--- a/.github/workflows/sync-dropbox.yml
+++ b/.github/workflows/sync-dropbox.yml
@@ -12,7 +12,7 @@ jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
@@ -22,11 +22,12 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y rclone qpdf file
 
-      - name: Configure rclone token (Dropbox App Folder)
-        run: |
-          echo 'RCLONE_DROPBOX_TOKEN={"access_token":"${{ secrets.DROPBOX_ACCESS_TOKEN }}","token_type":"bearer","expiry":"0001-01-01T00:00:00Z"}' >> "$GITHUB_ENV"
-
-      - name: Sync from Dropbox (paths relative to app folder)
+      - name: Sync files from Dropbox (App Folder scope; no leading /)
+        env:
+          RCLONE_DROPBOX_TOKEN: ${{ secrets.DROPBOX_TOKEN_JSON }}
+          # If you created the token with your OWN Dropbox app, also set:
+          # RCLONE_DROPBOX_CLIENT_ID: ${{ secrets.DROPBOX_CLIENT_ID }}
+          # RCLONE_DROPBOX_CLIENT_SECRET: ${{ secrets.DROPBOX_CLIENT_SECRET }}
         run: |
           rclone sync ":dropbox:Website/Documents" "./docs" --fast-list
 
@@ -53,7 +54,7 @@ jobs:
             fi
           done
 
-      - name: Commit and push
+      - name: Commit and push changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: 'Docs: Auto-sync from Dropbox'
