--- a/.github/workflows/sync-dropbox.yml
+++ b/.github/workflows/sync-dropbox.yml
@@ -22,17 +22,25 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y rclone qpdf file
 
-      - name: Sync files from Dropbox (App-Folder token; no leading /)
+      - name: Define Dropbox source path
+        run: echo "SRC_PATH=Website/Documents" >> "$GITHUB_ENV"
+
+      # Quick visibility: what would change?
+      - name: rclone dry-run (debug)
         env:
           RCLONE_DROPBOX_TOKEN: ${{ secrets.DROPBOX_TOKEN_JSON }}
-          RCLONE_DROPBOX_CLIENT_ID: ${{ secrets.DROPBOX_CLIENT_ID }}         # your app key
-          RCLONE_DROPBOX_CLIENT_SECRET: ${{ secrets.DROPBOX_CLIENT_SECRET }} # your app secret
+          RCLONE_DROPBOX_CLIENT_ID: ${{ secrets.DROPBOX_CLIENT_ID }}
+          RCLONE_DROPBOX_CLIENT_SECRET: ${{ secrets.DROPBOX_CLIENT_SECRET }}
         run: |
-          # Change this to match your folder under the app root
-          SRC_PATH="Website/Documents"
-          # (Optional) quick listing to help if path is wrong:
-          rclone lsd ":dropbox:${SRC_PATH%/*}" || true
-          rclone sync ":dropbox:${SRC_PATH}" "./docs" --fast-list
+          rclone sync ":dropbox:${SRC_PATH}" "./docs" --fast-list --checksum --dry-run -vv || true
+
+      - name: Sync files from Dropbox (uses checksums; replaces + deletes)
+        env:
+          RCLONE_DROPBOX_TOKEN: ${{ secrets.DROPBOX_TOKEN_JSON }}
+          RCLONE_DROPBOX_CLIENT_ID: ${{ secrets.DROPBOX_CLIENT_ID }}
+          RCLONE_DROPBOX_CLIENT_SECRET: ${{ secrets.DROPBOX_CLIENT_SECRET }}
+        run: |
+          rclone sync ":dropbox:${SRC_PATH}" "./docs" --fast-list --checksum
 
       # Ensure PDFs are binary (no text filters/diffs)
       - name: Ensure .gitattributes for PDFs
@@ -57,6 +65,10 @@ jobs:
             fi
           done
 
+      # See if anything actually changed before we commit
+      - name: Show git status (debug)
+        run: git status --porcelain=v1
+
       - name: Commit and push changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
@@ -66,3 +78,4 @@ jobs:
           file_pattern: |
             .gitattributes
             docs
+          add_options: '--all'   # ensure deletions/renames are staged
