--- a/.github/workflows/sync-dropbox.yml
+++ b/.github/workflows/sync-dropbox.yml
@@ -5,7 +5,7 @@ on:
     - cron: '0 6 * * *'   # daily at 06:00 UTC (~08:00 Rome)
   workflow_dispatch:
 
-# We use a PAT for pushing; this can stay read or be omitted.
+# We push with PAT, so GITHUB_TOKEN can stay read-only
 permissions:
   contents: read
 
@@ -13,23 +13,33 @@ jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository (with PAT)
+      - name: Checkout (main, with PAT)
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
-          token: ${{ secrets.PAT }}   # <- use your PAT for push perms
           ref: main
+          fetch-depth: 0
+          token: ${{ secrets.PAT }}
 
       - name: Install tools
         run: |
           sudo apt-get update
           sudo apt-get install -y rclone qpdf file
 
-      # Set your Dropbox path under the *app folder* (no leading /)
       - name: Define Dropbox source path
         run: echo "SRC_PATH=Website/Documents" >> "$GITHUB_ENV"
 
-      - name: Sync from Dropbox
+      # 1) Prove the CV exists on Dropbox at the expected path
+      - name: Remote listing (must show CV)
+        env:
+          RCLONE_DROPBOX_TOKEN: ${{ secrets.DROPBOX_TOKEN_JSON }}
+          RCLONE_DROPBOX_CLIENT_ID: ${{ secrets.DROPBOX_CLIENT_ID }}
+          RCLONE_DROPBOX_CLIENT_SECRET: ${{ secrets.DROPBOX_CLIENT_SECRET }}
+        run: |
+          rclone lsf ":dropbox:${SRC_PATH}/CV" || (echo "::error::Remote CV folder missing (check SRC_PATH and case)"; exit 1)
+          rclone lsl ":dropbox:${SRC_PATH}/CV/KimTaveras_CV.pdf" || (echo "::error::Remote CV file missing"; exit 1)
+
+      # 2) Sync
+      - name: rclone sync
         env:
           RCLONE_DROPBOX_TOKEN: ${{ secrets.DROPBOX_TOKEN_JSON }}
           RCLONE_DROPBOX_CLIENT_ID: ${{ secrets.DROPBOX_CLIENT_ID }}
@@ -37,7 +47,17 @@ jobs:
         run: |
           rclone sync ":dropbox:${SRC_PATH}" "./docs" --fast-list -vv
 
-      # Ensure PDFs are binary (no text filters/diffs)
+      # 3) Show what changed locally
+      - name: Show local docs & git status
+        run: |
+          echo "---- ls docs (recursive) ----"
+          ls -alR docs || true
+          echo "---- check-ignore (should be empty) ----"
+          git check-ignore -v docs/CV/KimTaveras_CV.pdf || true
+          echo "---- git status ----"
+          git status --porcelain=v1
+
+      # 4) Make PDFs binary (not ignored) + normalise
       - name: Ensure .gitattributes for PDFs
         run: |
           {
@@ -45,7 +65,6 @@ jobs:
             echo "*.PDF binary"
           } > .gitattributes
 
-      # Normalise/linearise PDFs and verify signatures & MIME
       - name: Normalise and verify PDFs
         run: |
           shopt -s nullglob globstar
@@ -60,9 +79,14 @@ jobs:
             fi
           done
 
+      - name: Show git status after normalise
+        run: git status --porcelain=v1
+
+      # 5) Commit & push with PAT (stage deletions too)
       - name: Commit and push changes (to main)
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
+          token: ${{ secrets.PAT }}                    # <-- ensure PAT is used
           branch: main
           commit_message: 'Docs: Auto-sync from Dropbox'
           commit_user_name: 'GitHub Actions Bot'
@@ -72,9 +96,10 @@ jobs:
             docs
           add_options: '--all'
 
-      # Prove the file is on the remote branch after push
-      - name: Verify file on origin/main
+      # 6) Verify it’s on the remote branch
+      - name: Verify CV on origin/main
         run: |
           git fetch origin main --depth=1
           git cat-file -e origin/main:docs/CV/KimTaveras_CV.pdf || (echo "::error::CV not on remote main"; exit 1)
           echo "OK: CV present on origin/main"
+          git log -1 --stat -- docs/CV/KimTaveras_CV.pdf
